--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,19 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# IntelliJ IDEA specific files
+.idea/
+*.iml
+*.iws
+out/
+target/
+
+# Gradle
+.gradle/
+build/
+
+# Other IDEs
+
+# VS Code project files
+.vscode/
